# tokenlight

./: .dockerignore  .gitignore  .gitmodules  README.md  pyproject.toml
configs/: accelerate_wan22_6x40gb_zero3.yaml  accelerate_zero3.yaml  accelerate_zero3_b20x6.yaml  accelerate_zero3_cpuoffload.yaml  ds_z3.json  ds_z3_b20x6.json  ds_z3_cpuoffload.json  infer_config.json  infer_objaverse_960.json  infer_wan22_spatial_lora_nomask.json  relighting_dataset_960.json  relighting_dataset_wan22_1280x704.json  tokenlight_cosmos.toml  tokenlight_wan22_ti2v_5b.toml  train_config.json  train_sample_exr_50scene_7light_color6_zero_mask_zero3.json  train_sample_exr_fixed10_zero3.json  train_tokenlight_full_a_zero3.json  train_tokenlight_full_a_zero3_640.json  train_tokenlight_objaverse_ratio3p5_640_zero3.json  train_tokenlight_pbr_depth_objaverse_ratio3p5_640_zero3.json  train_tokenlight_pbr_depth_single.json  train_tokenlight_pbr_depth_zero3.json  train_tokenlight_pbr_shading_single.json  train_tokenlight_pbr_zero3.json  train_tokenlight_single.json  train_tokenlight_zero3.json  train_wan22_spatial_lora_nomask.json
docker/: Dockerfile  constraints-runtime.txt  entrypoint.sh  requirements-runtime.txt  requirements.txt
docs/: docker_workspace.md  tokenlight_cosmos_base.md  tokenlight_wan22_base.md
manifests/: 4inputs_xyz64_epoch3.jsonl
model/: batch_infer_blender_relight.py  illumination_latent_head.py  infer.py  infer_tokenlight.py  lightoken_encoder.py  pretrain_weight.py  tokenlight_wan.py  tokenlight_wan_pbr.py  train_tokenlight.py  train_tokenlight_pbr.py  (+4 more)
(+62 files in other folders)
