[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenlight-reproduction"
version = "0.1.0"
description = "Paper-scale TokenLight reproduction scaffold."
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "torchvision>=0.17",
  "pillow>=10",
  "numpy>=1.24",
  "tqdm>=4.66",
  "tomli>=2.0; python_version<'3.11'",
]

[project.optional-dependencies]
diffusers = ["diffusers>=0.31", "accelerate>=0.30"]
exr = ["imageio>=2.34"]
metrics = ["lpips>=0.1.4"]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]
