[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenlight-wan"
version = "0.2.0"
description = "Wan2.2-TI2V-5B TokenLight reproduction with numeric light tokens."
requires-python = ">=3.10"
dependencies = [
  "torch>=2.6",
  "accelerate>=1.2",
  "deepspeed>=0.16",
  "pillow>=10",
  "numpy>=1.24",
  "tqdm>=4.66",
  "safetensors>=0.5",
]

[project.optional-dependencies]
exr = ["imageio>=2.34"]
metrics = ["lpips>=0.1.4"]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]
